Dark mode Lasttrans And new member fix bug : style main

--- a/src/assets/css/LatestTransActions/LatestTransActions.css
+++ b/src/assets/css/LatestTransActions/LatestTransActions.css
@@ -1,6 +1,7 @@
 .Latest-TransAction{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 1rem;
+    border-radius: 5px;
 }
 .TransAction-title{
     margin-right: 1rem;
