--- a/src/assets/css/Main/main.css
+++ b/src/assets/css/Main/main.css
@@ -1,3 +1,3 @@
-.background-icon-dark.MuiBox-root.css-5zsdvm {
+.css-5zsdvm {
     overflow-y: auto;
 }
